--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 </div>
                 <div>
                   <h4 class="font-medium text-dark">公司地址</h4>
-                  <p class="text-gray-600">北京市海淀区中关村科技园区8号楼</p>
+                  <p class="text-gray-600">山东省临沂市兰山区顺和母幼采购基地2-32号</p>
                 </div>
               </div>
               
